<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/notButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_a_notification"
        android:layout_marginTop="@dimen/large_margin"
        android:onClick="startSchedule"/>

    <Button
        android:id="@+id/bigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/big_notification"
        android:onClick="startBig"/>

    <Button
        android:id="@+id/inbButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stack_mesages_notification"
        android:onClick="startInbox"/>
</LinearLayout>