<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/schedule_title_layout"
        android:hint="@string/input_notification_title"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/schedule_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/schedule_content_layout"
        android:layout_below="@id/schedule_title_layout"
        android:hint="@string/input_notification_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/schedule_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/schedule_time"
        android:layout_below="@id/schedule_content_layout"
        android:hint="@string/time"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/schedule_time_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
        android:contentDescription="@string/time_picker_button"
        android:onClick="showTimePicker"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule_a_notification"
        android:onClick="scheduleNotification"
        android:layout_below="@+id/schedule_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>