<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bigTitleLayout"
        android:hint="@string/input_notification_title"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bigEditTitle"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bigTitleLayout"
        android:hint="@string/input_notification_content"
        android:id="@+id/bigContentLayout"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bigEditText"
            android:maxLines="5"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/create_big"
        android:onClick="createBigNotification"/>
</RelativeLayout>