<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inboxTitleText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/medium_margin"
            android:hint="@string/input_notification_title"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/titleContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inboxMessage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/inboxTitleText"
            android:hint="@string/message1"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/message1Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inboxMessage2"
            android:layout_below="@+id/inboxMessage1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/message2"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="30">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/message2Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inboxMessage3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/inboxMessage2"
            android:hint="@string/message3"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/message3Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/createInboxButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_inbox_notification"
            android:layout_below="@+id/inboxMessage3"
            android:onClick="createInboxNotification"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/medium_margin" />
    </RelativeLayout>
</ScrollView>